CHANGES
=======

0.5dev(Unreleased)
------------------

- Included social media buttons to the blog entry view. The fork
  https://github.com/patrickheck/socialshareprivacy/ of
  http://www.heise.de/extras/socialshareprivacy/ was used for the implementation.
- Update translations.


0.4(2013-10-20)
---------------

- Include batch functionality from plone.batching and remove this dependency.
- Use kotti_settings for the settings of the blog.


0.3.1(2012-12-10)
-----------------

- Fix import from deprecated location.


0.3(2012-11-20)
---------------

- Refactore date formatting to have the date locale aware.
- Changes for compatibility with Kotti>=0.8. These changes
  are not backward compatibel. If you want to use kotti_blog
  with Kotti<=0.7.x then pin kotti_blog to 0.2.1.
  - Use form classes for the form views instead of deprecated generic functions.
  - Move fanstatic library to fanstatic.py.
- Added minified style and JavaScript.
- Use view_config decoration for views.


0.2.1(2012-09-04)
-----------------

- Private blog entries should not be shown in the blog overview.


0.2.1a1(2012-08-21)
-------------------

- Move to fanstatic for include static resources.
- Convert SQLAlchemy tables to Declarative syntax.
- Fix how content types appear in Add menu.
- Document subclasses should not have duplicate 'body' field.
- Added batching of blog entries on overview and settings for it.
- Added dynamic batching via ajax loads.
- Added kotti_blog.asset_overrides attribute to settings.


0.1
---

- Initial release.