@@ -7,6 +7,7 @@ CHANGES
 - Included social media buttons to the blog entry view. The fork
   https://github.com/patrickheck/socialshareprivacy/ of
   http://www.heise.de/extras/socialshareprivacy/ was used for the implementation.
+- Added settings to enable/disable sidebar and choose the slot where it is shown.
 - Update translations.
 
 
